--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ Table of Contents
 
 ** 1.0. Main CSS **
 1.1. Main Components
-1.2. Cluster & Content Pages
+1.2.1. Cluster Pages [moved to separate file]
+1.2.2. Content Pages [moved to separate file]
 1.3. Anchors, Headings, Images
 1.4.1. Navigation: Main
 1.4.2. Overlay
@@ -210,217 +211,14 @@ hr{
 }
 
 
-/* 1.2. Cluster & Content Pages */
+/* 1.2.1. Cluster Pages */
 
-/* Section-specific colors */
-/* 
-Zoomcasts (red): #94433f;
-Green: #5c7d62;
-Yellow: #f2da87;
-Blue: #1457af;
-Light Blue: #b9d6fa;
-Gray: #595959;
-*/
-/* ----------------------- */
-.zoomcasts.cluster main section:first-child{
-	background: linear-gradient(to left top, #fff 50%, #c3503b 50%);
-}
-.zoomcasts.content header,
-.zoomcasts.cluster main section h2{
-	color: white;
-	background: #c3503b;
-}
-/* ----------------------- */
-.cluster main{
-	margin: 47px auto 0;
-	padding: 0 .5em 0;
-	max-width: 100%;
-	position: relative;
-}
-@media only screen and (min-width: 480px){
-	.cluster main{
-		margin-top: 47px;
-		padding: .5em 1em 0;
-	}
-}
-@media only screen and (min-width: 768px){
-	.cluster main{
-		margin-top: 51px;
-		max-width: 700px;
-	}
-}
-@media only screen and (min-width: 992px){
-	.cluster main{
-		margin-top: 63px;
-		padding: 0 1em;
-		max-width: 1366px;
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-		align-items: stretch;
-	}
-}
-.cluster main section{
-	border: 1px solid #322d29;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	margin: 1em auto;
-}
-.cluster main section:first-child{
-	min-height: 150px;
-	position: relative;
-}
-@media only screen and (min-width: 480px){
-	.cluster main section{
-		margin: .5em 0 1.5em;
-	}
-}
-@media only screen and (min-width: 992px){
-	.cluster main section{
-		margin: 1em;
-		max-width: 500px;
-		flex: 1 0 calc(50% - 2em - 2px);
-	}
-		.cluster main section:first-child{
-			max-width: 300px;
-			flex: 1 0 calc(27.5% - 2em - 2px);
-	}
-		.cluster main section:nth-child(2){
-			max-width: 600px;
-			flex: 1 0 calc(72.5% - 2em - 2px);
-	}
-}
-.cluster main section h2{
-	font-size: 1.1em;
-	font-weight: 700;
-	font-variant: normal;
-	color: #fff;
-	border-bottom: 1px solid #322d29;
-	border-radius: 4px 4px 0 0;
-	-webkit-border-radius: 4px 4px 0 0;
-	-moz-border-radius: 4px 4px 0 0;
-	margin-top: 0;
-	padding: .5em 0;
-}
-.cluster main section h2#level-2-title{
-	font-size: 1.5em;
-	white-space: nowrap;
-	border: 3px solid #fff;
-	border-radius: 5px;
-	margin: 0;
-	padding: 10px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-.cluster main section p{
-	padding: 0 1em;
-}
-.cluster main section div{
-	line-height: 0;
-	margin: 1em;
-	padding: 0;
-	overflow: hidden;
-	position: relative;
-}
-.cluster main section div:hover,
-.cluster main section div:focus-within{
-	outline: 3px solid #1C4C87;
-}
-.cluster main section div img{
-	background: #E3E3E3;
-	max-width: 100%;
-	min-height: 150px;
-}
-@media only screen and (min-width: 480px){
-	.cluster main section div img{
-		min-height: 230px;
-	}
-}
-@media only screen and (min-width: 768px){
-	.cluster main section div img{
-		min-height: 370px;
-	}
-}
-@media only screen and (min-width: 992px){
-	.cluster main section div img{
-		min-height: 229px;
-	}
-}
-@media only screen and (min-width: 1200px){
-	.cluster main section div img{
-		min-height: 263px;
-	}
-}
-.cluster main section div a img{
-	border: none;
-}
-.cluster main section div a:hover img,
-.cluster main section div a:focus img{
-	border: none;
-	opacity: .7;
-}
-.cluster main section div span{
-	color: #fff;
-	background-color: #595959;
-	line-height: 1.5em;
-	text-align: center;
-	width: 100%;
-	/* min-height: 20%; */
-	position: absolute;
-	bottom: 0;
-	left: 50%;
-	transform: translate(-50%, 0);
-	opacity: .83;
-}
-.cluster main section div a:hover,
-.cluster main section div a:focus{
-	background: none;
-}
-.content header{
-	font-size: 1.1em;
-	margin: calc(41px + .3em) auto 0;
-	padding: 0;
-	height: 20px;
-	max-width: calc(100% - 26px);
-}
-@media only screen and (min-width: 480px){
-	.content header{
-		margin: calc(47px + .3em) auto 0;
-		width: calc(100% - 30px);
-		max-width: 700px;
-	}
-}
-@media only screen and (min-width: 768px){
-	.content header{
-		margin: calc(51px + .3em) auto 0;
-	}
-}
-@media only screen and (min-width: 992px){
-	.content header{
-		margin: calc(63px + .3em) auto 0;
-		width: calc(100% - 46px);
-		max-width: 1366px;
-	}
-}
-.content main{
-	text-align: left;
-	padding: .5em 1em 1em;
-}
-.content h2{
-	font-size: 1.9em;
-	color: #191716;
-	line-height: 1.3em;
-	/* margin: 0; */
-	margin: .25em 0 .5em;
-}
-@media only screen and (min-width: 768px){
-	.content h2{
-		margin: .5em 0 1em;
-	}
-}
+/* Moved to separate file */
+
+
+/* 1.2.2. Content Pages */
+
+/* Moved to separate file */
 
 
 /* 1.3. Anchors, Headings, Images */
